<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/fakeContentView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@id/trueContentContainerLl"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/trueContentContainerLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_task_dialog"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/updateTaskTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/update_task"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/deleteTaskTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/delete_task"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/theme_second" />

        <TextView
            android:id="@+id/cancelTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>